--- a/styles.css
+++ b/styles.css
@@ -12,51 +12,46 @@ body {
   text-align: center;
   font-size: 30px;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(8, 1fr); 
-  gap: 5px;
+  grid-template: 1fr 1fr 5fr 1fr/ 1fr 3fr;
+  grid-template-areas: 
+  "header header"
+  "aside nav"
+  "aside article"
+  "footer footer"
+  
+ 
+
 
 }
 
 header {
   background: #ffcdd2;
-  grid-column-start: 1;
-  grid-column-end: 13;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  grid-area: header;
+  
   
 }
 
 aside {
   background: #e1bee7;
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 8;
+  grid-area: aside;
+  
 }
 
 nav {
   background: #bbdefb;
-  grid-column-start: 3;
-  grid-column-end: 13;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-area: nav;
+  
 }
 
 article {
   background: #dcedc8;
-  grid-column-start: 3;
-  grid-column-end: 13;
-  grid-row-start: 3;
-  grid-row-end: 8;
+  grid-area: article;
+  
 
 }
 
 footer {
   background: #ffecb3;
-  grid-column-start: 1;
-  grid-column-end: 13;
-  grid-row-start: 8;
-  grid-row-end: 10;
+  grid-area: footer;
 
 }
